; ModuleID = '/home/carl/AnghaBench/git/refs/extr_files-backend.c_create_ref_symlink.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_files-backend.c_create_ref_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_lock = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"no symlink - falling back to symbolic ref\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ref_lock*, i8*)* @create_ref_symlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_ref_symlink(%struct.ref_lock* %0, i8* %1) #0 {
  %3 = alloca %struct.ref_lock*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.ref_lock* %0, %struct.ref_lock** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 -1, i32* %5, align 4
  %7 = load %struct.ref_lock*, %struct.ref_lock** %3, align 8
  %8 = getelementptr inbounds %struct.ref_lock, %struct.ref_lock* %7, i32 0, i32 0
  %9 = call i8* @get_locked_file_path(i32* %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @unlink(i8* %10)
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @symlink(i8* %12, i8* %13)
  store i32 %14, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @stderr, align 4
  %21 = call i32 @fprintf(i32 %20, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %19, %2
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i8* @get_locked_file_path(i32*) #1

declare dso_local i32 @unlink(i8*) #1

declare dso_local i32 @symlink(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
